Made a major change in merchnadise section

--- a/views/club_dashboard.ejs
+++ b/views/club_dashboard.ejs
@@ -532,7 +532,7 @@
         <label class="club-dashboard-form-label">Category</label>
         <select class="club-dashboard-form-select">
           <option>Jersey</option>
-          <option>Cap</option>
+          <option>Apparel</option>
           <option>Accessories</option>
           <option>Equipment</option>
         </select>
