--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="/styles/live_score.css">
     <link rel="stylesheet" href="/styles/leader_selection.css">
     <link rel="stylesheet" href="/styles/specific_scorecard.css">
+    <link rel="stylesheet" href="/styles/merch.css">
+    <link rel="stylesheet" href="/styles/cart.css">
     <title>Crossfit</title>
 </head>
 <body>
@@ -40,5 +42,9 @@
     <script src="/script/specific_scorecard.js"></script>
     <script src="/script/leader_selection.js"></script>
     <script src="/script/club_enlistpage.js"></script>
+    <script src="/script/cart.js"></script>
+    <script src="/script/merch-filters.js"></script>
+    <script src="/script/cart.js"></script>
+    <script src="/script/merch-filters.js"></script>
 </body>
 </html>
