--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="/styles/specific_scorecard.css">
     <link rel="stylesheet" href="/styles/merch.css">
     <link rel="stylesheet" href="/styles/cart.css">
+    <link rel="stylesheet" href="/styles/card_game.css">
     <title>Crossfit</title>
 </head>
 <body>
@@ -46,5 +47,6 @@
     <script src="/script/merch-filters.js"></script>
     <script src="/script/cart.js"></script>
     <script src="/script/merch-filters.js"></script>
+    <script src="/script/card_game.js"></script>
 </body>
 </html>
