About section - basic

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="/styles/merch.css">
     <link rel="stylesheet" href="/styles/cart.css">
     <link rel="stylesheet" href="/styles/card_game.css">
+    <link rel="stylesheet" href="/styles/about.css">
     <title>Crossfit</title>
 </head>
 <body>
