--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,7 +8,7 @@
     </div>
     <div class="footer-center">
       <div class="footer-links">
-        <a href="#">About Us</a>
+        <a href="/about">About Us</a>
         <a href="#">Contact Us</a>
         <a href="#">FAQ</a>
         <a href="#">Terms of Service</a>
