--- a/views/card-game.ejs
+++ b/views/card-game.ejs
@@ -26,7 +26,7 @@
       <div class="deck" id="deck2">
         <div class="player-info">
           <div class="player-avatar" style="background-image: url('/images/computer.png')"></div>
-          <h3 class="player-name">Player 2</h3>
+          <h3 class="player-name">Computer</h3>
           <div class="card-count"><span id="p2count">10</span> cards</div>
         </div>
       </div>
