--- a/views/club_dashboard.ejs
+++ b/views/club_dashboard.ejs
@@ -331,7 +331,7 @@
       <label for="player_profile_picture"><img class="club-dashboard-opponent-logo-img" src="/images/avatar.png"
           alt="profile"></label>
       <input type="text" name="name" placeholder="Player Name" required />
-      <input type="file" id="player_profile_picture" name="profile_picture" />
+      <input type="file" style="display: none;" id="player_profile_picture" name="profile_picture" />
 
       <select name="type" name="type" required>
         <option value="">Select Type</option>
