--- a/views/merchandise.ejs
+++ b/views/merchandise.ejs
@@ -5,10 +5,10 @@
 
 <main class="merch-container">
     <!-- 1. Page Header Section -->
-    <header class="merch-header">
+    <div class="merch-header">
         <h1 class="merch-header__title">Official Club Merchandise</h1>
         <p class="merch-header__subtitle">Find the latest gear and support your team</p>
-    </header>
+    </div>
 
     <!-- 2. Filter Controls Section -->
     <div class="merch-filters">
