--- a/public/styles/merch.css
+++ b/public/styles/merch.css
@@ -27,6 +27,9 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
+  /* position: sticky; */
+  z-index: -100;
+  
 }
 
 .merch-header {
