--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="/styles/cart.css">
     <link rel="stylesheet" href="/styles/card_game.css">
     <link rel="stylesheet" href="/styles/about.css">
+    <link rel="stylesheet" href="/styles/error.css">
     <title>Crossfit</title>
 </head>
 <body>
